methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:11: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:17: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:27: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:37: error: not found: value dogHouse
		dogHouse();		
                ^